Fix FF whitespace overflow problem

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,7 @@
+.about-page{
+  overflow: hidden;
+}
+
 .about-top-text{
   padding-left: 2rem;
   padding-right: 2rem;
@@ -102,7 +106,7 @@
     width: auto;
     height: 200%;
     position: relative;
-    bottom: 2rem;
+    bottom: 23.5em;
   }
 
   .about-top-text{
